register part added

--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
         </div>
        <div class="container my-5">
         <div class="row g-3">
-           <div class="col-6 ">
-            <div class="d-flex border border-secondary rounded-2 ">
+           <div class="col-12 col-md-12 col-lg-6">
+            <div class="d-md-flex border border-secondary rounded-2 ">
                 <div>
-                 <img class="" src="images/course/course-1.png" alt="">
+                 <img class="w-100" src="images/course/course-1.png" alt="">
                 </div>
                 <div class="ms-3 p-3 mt-3">
                  <h5>Fundamental Of UI/UX Design</h5>
@@ -115,10 +115,10 @@
                 </div>
              </div>
            </div>
-           <div class="col-6 ">
-            <div class="d-flex border border-secondary rounded-2 ">
+           <div class="col-12 col-lg-6  ">
+            <div class="d-md-flex border border-secondary rounded-2 ">
                 <div>
-                 <img class="" src="images/course/course-2.png" alt="">
+                 <img class="w-100" src="images/course/course-2.png" alt="">
                 </div>
                 <div  class="ms-3 p-3 mt-3">
                  <h5>Fundamental Of UI/UX Design</h5>
@@ -127,10 +127,10 @@
                 </div>
              </div>
            </div>
-           <div class="col-6 ">
-            <div class="d-flex border border-secondary rounded-2 ">
+           <div class="col-12  col-lg-6 ">
+            <div class="d-md-flex border border-secondary rounded-2 ">
                 <div>
-                 <img class="" src="images/course/course-3.png" alt="">
+                 <img class="w-100" src="images/course/course-3.png" alt="">
                 </div>
                 <div  class="ms-3 p-3 mt-3">
                  <h5>Fundamental Of UI/UX Design</h5>
@@ -139,10 +139,10 @@
                 </div>
              </div>
            </div>
-           <div class="col-6 ">
-            <div class="d-flex border border-secondary rounded-2 ">
+           <div class="col-12  col-lg-6  ">
+            <div class="d-md-flex border border-secondary rounded-2 ">
                 <div>
-                 <img class="" src="images/course/course-4.png" alt="">
+                 <img class="w-100" src="images/course/course-4.png" alt="">
                 </div>
                 <div  class="ms-3 p-3 mt-3">
                  <h5>Fundamental Of UI/UX Design</h5>
@@ -151,10 +151,10 @@
                 </div>
              </div>
            </div>
-           <div class="col-6 ">
-            <div class="d-flex border border-secondary rounded-2 ">
+           <div class="col-12  col-lg-6  ">
+            <div class="d-md-flex border border-secondary rounded-2 ">
                 <div>
-                 <img class="" src="images/course/course-5.png" alt="">
+                 <img class="w-100" src="images/course/course-5.png" alt="">
                 </div>
                 <div class="ms-3 p-3 mt-3">
                  <h5>Fundamental Of UI/UX Design</h5>
@@ -163,10 +163,10 @@
                 </div>
              </div>
            </div>
-           <div class="col-6 ">
-            <div class="d-flex border border-secondary rounded-2 ">
+           <div class="col-12  col-lg-6 ">
+            <div class="d-md-flex border border-secondary rounded-2 ">
                 <div>
-                 <img class="" src="images/course/course-6.png" alt="">
+                 <img class="w-100" src="images/course/course-6.png" alt="">
                 </div>
                 <div  class="ms-3 p-3 mt-3">
                  <h5>Fundamental Of UI/UX Design</h5>
@@ -185,6 +185,17 @@
      </section>
      
      <!---------------- Courses end -------- -->
+
+     <!------------- Register Part & Modal  -->
+     <section class="container d-flex align-items-center justify-content-between bg-primary p-5 m-5">
+        <div class="text-light ms-5 my-3">
+            <h1>Ready Join</h1>
+            <p>If you want to  join with us click register</p>
+        </div>
+        <button class="bg-light text-primary fw-semibold border-0 px-4 py-2 rounded-1 me-5"> Register Now</button>
+
+     </section>
+
   </main>  
 
   
