trusted companies added

--- a/index.html
+++ b/index.html
@@ -371,8 +371,16 @@
         </section>
 
      <!------------ Trusted Companies start -->
-     <section>
-        
+     <section class="container my-5 d-none d-lg-block ">
+        <h1 class="text-center my-5">Trusted By Over 600+ Companies</h1>
+        <div class=" d-flex align-items-center justify-content-around">
+            <img style="height:20px ;" src="images/company/company-1.png" alt="">
+            <img style="height:30px ;" src="images/company/company-2.png" alt="">
+            <img style="height:30px ;"src="images/company/company-3.png" alt="">
+            <img style="height:20px ;" src="images/company/company-4.png" alt="">
+            <img style="height:30px ;" src="images/company/company-5.png" alt="">
+            <img style="height:35px ;" src="images/company/company-6.png" alt="">
+        </div>
      </section>
      <!------------ Trusted Companies End -->
 
