--- a/index.html
+++ b/index.html
@@ -33,10 +33,8 @@
                   <li class="nav-item">
                     <a class="nav-link">About</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link">Register</a>
-                  </li>
-                  <button class="border border-2 p-2 text-info border-info"> Register</button>
+                  
+                  <button class="border border-2 p-2 text-info border-info fw-bold ms-3"> Register</button>
                 </ul>
               </div>
             </div>
